add route guard

--- a/webApp/product-explorer/src/app/demo/components/landing/landing.component.html
+++ b/webApp/product-explorer/src/app/demo/components/landing/landing.component.html
@@ -31,8 +31,8 @@
                     </li>
                 </ul>
                 <div class="flex justify-content-between lg:block border-top-1 lg:border-top-none surface-border py-3 lg:py-0 mt-3 lg:mt-0">
-                    <button pButton pRipple label="Login" class="p-button-text p-button-rounded border-none font-light line-height-2 text-blue-500"></button>
-                    <button pButton pRipple label="Register" class="p-button-rounded border-none ml-5 font-light line-height-2 bg-blue-500 text-white"></button>
+                    <button pButton pRipple label="Login" (click)="navigateToLogin()" class="p-button-text p-button-rounded border-none font-light line-height-2 text-blue-500"></button>
+                    <button pButton pRipple label="Register" (click)="navigateToSignup()" class="p-button-rounded border-none ml-5 font-light line-height-2 bg-blue-500 text-white"></button>
                 </div>
             </div>
         </div>
