--- a/webApp/product-explorer/src/assets/demo/styles/badges.scss
+++ b/webApp/product-explorer/src/assets/demo/styles/badges.scss
@@ -42,7 +42,7 @@
         color: #8A5340;
     }
 
-    &.status-new {
+    &.status-started {
         background: #B3E5FC;
         color: #23547B;
     }
