--- a/webApp/product-explorer/src/app/demo/components/investigation-details/customer-insights/customer-insights.component.html
+++ b/webApp/product-explorer/src/app/demo/components/investigation-details/customer-insights/customer-insights.component.html
@@ -23,10 +23,10 @@
         </div>
     </div>
 
-    <div class="col-12">
+    <div class="col-12" *ngFor="let item of tablesKeys">
         <div class="card">
             <div class="flex justify-content-between align-items-center align-content-center flex-column sm:flex-row"> 
-                <h5 class="mb-4">Possitive Feedback</h5>
+                <h5 class="mb-4">{{item.title}}</h5>
                 <button class="p-button-outlined mb-4" label="Download" type="button" pButton pRipple icon="pi pi-file-excel" (click)="exportExcel(positiveFeedbackData)"  pTooltip="XLS" tooltipPosition="bottom"></button>
             </div>
             <ng-template pTemplate="caption">
@@ -35,7 +35,7 @@
                     
                 </div>
             </ng-template>
-            <p-table #dt [columns]="cols" [value]="positiveFeedbackData" [exportHeader]="'customExportHeader'" [tableStyle]="{ 'min-width': '50rem' }">
+            <p-table #dt [columns]="cols" [value]="tables[item.originalKey]" [exportHeader]="'customExportHeader'" [tableStyle]="{ 'min-width': '50rem' }">
                 <ng-template pTemplate="header" let-columns>
                     <tr>
                         <th *ngFor="let col of columns">
@@ -46,105 +46,15 @@
                 <ng-template pTemplate="body" let-rowData let-columns="columns">
                     <tr [pSelectableRow]="rowData">
                         <td>{{rowData.label}}</td>
-                        <td><p-progressBar [value]="rowData.value"></p-progressBar></td>
-                        <td>{{rowData.description}}</td>
+                        <td><p-progressBar [value]="rowData.percentage"></p-progressBar></td>
+                        <td>{{rowData.numberOfObservations}}</td>
+                        <td>{{rowData.rating}}</td>
+                        <td>{{rowData.customerVoice[0]}}</td>
                     </tr>
                 </ng-template>
             </p-table>
         </div>
     </div>
 
-    <div class="col-12">
-        <div class="card">
-            <div class="flex justify-content-between align-items-center align-content-center flex-column sm:flex-row"> 
-                <h5 class="mb-4">Negative Feedback</h5>
-                <button class="p-button-outlined mb-4" label="Download" type="button" pButton pRipple icon="pi pi-file-excel" (click)="exportExcel(negativeFeedbackData)"  pTooltip="XLS" tooltipPosition="bottom"></button>
-            </div>
-            <ng-template pTemplate="caption">
-                <div class="flex">
-                    <p-tag class="text-lg" severity="success" value="Positive Feedback"></p-tag>
-                    
-                </div>
-            </ng-template>
-            <p-table #dt [columns]="cols" [value]="negativeFeedbackData" [exportHeader]="'customExportHeader'" [tableStyle]="{ 'min-width': '50rem' }">
-                <ng-template pTemplate="header" let-columns>
-                    <tr>
-                        <th *ngFor="let col of columns">
-                            {{ col.header }}
-                        </th>
-                    </tr>
-                </ng-template>
-                <ng-template pTemplate="body" let-rowData let-columns="columns">
-                    <tr [pSelectableRow]="rowData">
-                        <td>{{rowData.label}}</td>
-                        <td><p-progressBar [value]="rowData.value"></p-progressBar></td>
-                        <td>{{rowData.description}}</td>
-                    </tr>
-                </ng-template>
-            </p-table>
-        </div>
-    </div>
-
-    <div class="col-12">
-        <div class="card">
-            <div class="flex justify-content-between align-items-center align-content-center flex-column sm:flex-row"> 
-                <h5 class="mb-4">Buyers Motivation</h5>
-                <button class="p-button-outlined mb-4" label="Download" type="button" pButton pRipple icon="pi pi-file-excel" (click)="exportExcel(buyersMotivationData)"  pTooltip="XLS" tooltipPosition="bottom"></button>
-            </div>
-            <ng-template pTemplate="caption">
-                <div class="flex">
-                    <p-tag class="text-lg" severity="success" value="Positive Feedback"></p-tag>
-                    
-                </div>
-            </ng-template>
-            <p-table #dt [columns]="buyersMotivationCols" [value]="buyersMotivationData" [exportHeader]="'customExportHeader'" [tableStyle]="{ 'min-width': '50rem' }">
-                <ng-template pTemplate="header" let-columns>
-                    <tr>
-                        <th *ngFor="let col of columns">
-                            {{ col.header }}
-                        </th>
-                    </tr>
-                </ng-template>
-                <ng-template pTemplate="body" let-rowData let-columns="columns">
-                    <tr [pSelectableRow]="rowData">
-                        <td>{{rowData.label}}</td>
-                        <td><p-progressBar [value]="rowData.value"></p-progressBar></td>
-                        <td>{{rowData.description}}</td>
-                    </tr>
-                </ng-template>
-            </p-table>
-        </div>
-    </div>
-
-    <div class="col-12">
-        <div class="card">
-            <div class="flex justify-content-between align-items-center align-content-center flex-column sm:flex-row"> 
-                <h5 class="mb-4">Customer Expectations</h5>
-                <button class="p-button-outlined mb-4" label="Download" type="button" pButton pRipple icon="pi pi-file-excel" (click)="exportExcel(customerExpectationsData)"  pTooltip="XLS" tooltipPosition="bottom"></button>
-            </div>
-            <ng-template pTemplate="caption">
-                <div class="flex">
-                    <p-tag class="text-lg" severity="success" value="Positive Feedback"></p-tag>
-                    
-                </div>
-            </ng-template>
-            <p-table #dt [columns]="customerExpectationsCols" [value]="customerExpectationsData" [exportHeader]="'customExportHeader'" [tableStyle]="{ 'min-width': '50rem' }">
-                <ng-template pTemplate="header" let-columns>
-                    <tr>
-                        <th *ngFor="let col of columns">
-                            {{ col.header }}
-                        </th>
-                    </tr>
-                </ng-template>
-                <ng-template pTemplate="body" let-rowData let-columns="columns">
-                    <tr [pSelectableRow]="rowData">
-                        <td>{{rowData.label}}</td>
-                        <td><p-progressBar [value]="rowData.value"></p-progressBar></td>
-                        <td>{{rowData.description}}</td>
-                    </tr>
-                </ng-template>
-            </p-table>
-        </div>
-    </div>
 </div>
 
