--- a/webApp/product-explorer/src/assets/demo/styles/badges.scss
+++ b/webApp/product-explorer/src/assets/demo/styles/badges.scss
@@ -27,7 +27,7 @@
 }
 
 .customer-badge {
-    &.status-completed {
+    &.status-finished {
         background: #C8E6C9;
         color: #256029;
     }
